Fix mobile navbar width cutoff

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -10,6 +10,7 @@
   .navbar a {
     padding: 10px 10px;
     margin: 0 3px;
+    font-size: 1rem;
   }
 
   .flex-items {
